Fix pre element background in dark mode

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -122,7 +122,7 @@ footer {
 		color: #8bf;
 	}
 
-	code {
+	code, pre {
 		background: #444;
 	}
 
